# wgpu-raymarcher

./: Cargo.toml  README.md  build.rs  ideas.md
resources/src/: composit_shape_2.drawio  composit_shape_3.drawio  composite_shape.drawio  heterogenous shapes.drawio
src/: app.rs  camera.rs  color.rs  copy.wgsl  gradient.wgsl  main.rs  raymarcher.wgsl  shape.rs  sphere.rs
src/shaders/: copy.wgsl  gradient.wgsl  gradient2.wgsl  raymarcher.wgsl  raymarcher2.wgsl  raymarcher2.wgsl.json
src/shaders/components/: bindings.wgsl  distance.wgsl  distances.wgsl  geometry.wgsl  main.wgsl  math.wgsl  normal.wgsl  normals.wgsl  ray.wgsl  surface.wgsl  types.wgsl
src/shapes/: composit.rs  cuboid.rs  mod.rs  sphere.rs
