[package]
name = "raymarcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
env_logger = "0.9.0"
pollster = "0.2.5"
wgpu = { git="https://github.com/gfx-rs/wgpu.git", features=["vulkan-portability"] }
bytemuck = { version = "1.7.3", features=["derive"] }
lazy_static = "1.4.0"
rand_pcg = "0.3.1"
rand = "0.8.5"
arr_macro = "0.1.3"